--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
@@ -37,6 +38,10 @@ ol, ul {
   list-style: none;
 }
 
+a {
+  text-decoration: none;
+}
+
 blockquote, q {
   quotes: none;
 }
@@ -50,6 +55,156 @@ q:before, q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  background-color: black;
+}
+
+p, h1, a, i, .btn {
+  color: white;
+}
+
+h2 {
+  font-weight: bold;
+}
+
+h3, p, .btn {
+  font-size: 0.75rem;
+}
+
+h2, span {
+  color: #659dd9;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+header {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 20px;
+  background-color: black;
+  gap: 20px;
+  border-bottom: solid 2px white;
+  border-top: solid 2px white;
+}
+header .logo img {
+  max-width: 200px;
+  max-height: 200px;
+}
+header .menu {
+  display: flex;
+  gap: 20px;
+}
+header .menu .menu-item a {
+  color: white;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+header .menu .menu-item.active a {
+  color: #659dd9;
+}
+
+main {
+  display: flex;
+}
+main .aside {
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  border-right: solid 2px white;
+  border-top: solid 2px white;
+  height: 100vh;
+}
+main .aside nav .aside-list {
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+  gap: 20px;
+}
+main .aside nav .aside-item {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  flex-direction: column;
+}
+main .aside nav .aside-item i {
+  font-size: 40px;
+}
+main .aside nav .aside-item a {
+  text-transform: uppercase;
+  font-weight: bold;
+}
+main .container {
+  display: flex;
+  flex-direction: column;
+  margin: 25px;
+  width: 100%;
+}
+main .container .about, main .container .numbers {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: flex-start;
+  padding: 25px;
+  border: solid 2px white;
+  background-image: url("alien-7779711_1920.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+main .container .about p, main .container .about .btn, main .container .numbers p, main .container .numbers .btn {
+  font-size: 0.75rem;
+}
+main .container .about .btn, main .container .numbers .btn {
+  background-color: black;
+  border: white solid 1px;
+  padding: 7px 15px;
+  text-transform: uppercase;
+}
+main .container .numbers {
+  margin-top: 100px;
+  background-image: url("moon-2048727_1920.jpg");
+}
+main .container .numbers .items-header {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+main .container .numbers .section-item {
+  display: flex;
+  gap: 50px;
+}
+main .container .numbers .section-item .items {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  flex-wrap: wrap;
+}
+main .container .numbers .section-item .items .item-logo {
+  font-size: 35px;
+}
+main .container .numbers .section-item .items .item-logo i {
+  color: #659dd9;
+}
+main .container .numbers .section-item .items .item-content {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
+main .container .numbers .section-item .items .item-content h3 {
+  color: #659dd9;
+  font-weight: bold;
+}
+main .container .numbers .section-items-button {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  margin-top: 20px;
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
