--- a/index.css
+++ b/index.css
@@ -217,80 +217,4 @@ main .container .numbers .section-items-button {
   width: 100%;
 }
 
-.container-planets {
-  display: flex;
-  gap: 30px;
-  margin: 25px;
-  width: 100%;
-}
-.container-planets .section-planets {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  align-items: flex-start;
-  padding: 25px;
-  border: solid 2px white;
-  width: 100%;
-  height: max-content;
-  background-image: url("alien-7779711_1920.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.container-planets .section-planets .btn, .container-planets .section-planets .search {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-  background-color: black;
-  border: white solid 1px;
-  padding: 7px;
-}
-.container-planets .section-planets .btn input, .container-planets .section-planets .search input {
-  background-color: black;
-  border: transparent;
-  color: white;
-}
-.container-planets .section-planets .btn input:focus, .container-planets .section-planets .search input:focus {
-  outline: transparent;
-}
-.container-planets .section-planets .btn input i, .container-planets .section-planets .search input i {
-  color: white;
-}
-.container-planets .section-planets .search {
-  min-width: 100%;
-  margin-bottom: 20px;
-}
-.container-planets .section-planets table {
-  width: 100%;
-  border-collapse: collapse;
-}
-.container-planets .section-planets table thead {
-  background-color: #659dd9;
-  color: white;
-}
-.container-planets .section-planets table th, .container-planets .section-planets table td {
-  padding: 15px;
-  color: white;
-}
-.container-planets .section-planets table th:first-child, .container-planets .section-planets table td:first-child {
-  text-align: left;
-}
-.container-planets .section-planets table th:last-child, .container-planets .section-planets table td:last-child {
-  text-align: right;
-}
-.container-planets .section-planets table tr {
-  border-bottom: solid 1px white;
-}
-.container-planets .display-planets {
-  display: flex;
-  border: solid 1px white;
-  width: 100%;
-  height: max-content;
-  padding: 20px;
-}
-.container-planets .display-planets p {
-  color: #659dd9;
-  font-style: italic;
-}
-
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=index.css.map */
