--- a/index.css
+++ b/index.css
@@ -160,7 +160,7 @@ main .container .about, main .container .numbers {
   align-items: flex-start;
   padding: 25px;
   border: solid 2px white;
-  background-image: url("alien-7779711_1920.jpg");
+  background-image: url("assets/alien-7779711_1920.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -176,7 +176,7 @@ main .container .about .btn, main .container .numbers .btn {
 }
 main .container .numbers {
   margin-top: 100px;
-  background-image: url("moon-2048727_1920.jpg");
+  background-image: url("assets/moon-2048727_1920.jpg");
 }
 main .container .numbers .items-header {
   display: flex;
