--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ main .container .about, main .container .numbers {
   align-items: flex-start;
   padding: 25px;
   border: solid 2px white;
-  background-image: url("alien-7779711_1920.jpg");
+  background-image: url("assets/alien-7779711_1920.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -180,7 +180,7 @@ main .container .about .btn, main .container .numbers .btn {
 }
 main .container .numbers {
   margin-top: 100px;
-  background-image: url("moon-2048727_1920.jpg");
+  background-image: url("assets/moon-2048727_1920.jpg");
 }
 main .container .numbers .items-header {
   display: flex;
@@ -237,7 +237,7 @@ main .container .numbers .section-items-button {
   border: solid 2px white;
   width: 100%;
   height: max-content;
-  background-image: url("alien-7779711_1920.jpg");
+  background-image: url("assets/alien-7779711_1920.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -286,6 +286,11 @@ main .container .numbers .section-items-button {
 }
 .container-planets .section-planets table tr {
   border-bottom: solid 1px white;
+  cursor: pointer;
+  transition: 0.5s ease-in-out;
+}
+.container-planets .section-planets table tr:hover {
+  background-color: #7fa8d5;
 }
 .container-planets .display-planets {
   display: flex;
