--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-@use "./reset.scss";
+@use "style/reset";
 @use "./index.scss";
-@use "./planets.scss";
+@use "style/planets";
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
