--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
 @use "style/reset";
-@use "./index.scss";
+@use "style/index";
 @use "style/planets";
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
