--- a/style/index.scss
+++ b/style/index.scss
@@ -120,7 +120,7 @@ main {
       padding: 25px;
       border: solid 2px white;
 
-      background-image: url("assets/alien-7779711_1920.jpg");
+      background-image: url("alien-7779711_1920.jpg");
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
@@ -140,7 +140,7 @@ main {
 
     .numbers {
       margin-top: 100px;
-      background-image: url("assets/moon-2048727_1920.jpg");
+      background-image: url("moon-2048727_1920.jpg");
 
       .items-header {
         display: flex;
