--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ main .container .about, main .container .numbers {
   align-items: flex-start;
   padding: 25px;
   border: solid 2px white;
-  background-image: url("assets/alien-7779711_1920.jpg");
+  background-image: url("alien-7779711_1920.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -180,7 +180,7 @@ main .container .about .btn, main .container .numbers .btn {
 }
 main .container .numbers {
   margin-top: 100px;
-  background-image: url("assets/moon-2048727_1920.jpg");
+  background-image: url("moon-2048727_1920.jpg");
 }
 main .container .numbers .items-header {
   display: flex;
@@ -232,11 +232,11 @@ main .container .numbers .section-items-button {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  padding: 20px;
   align-items: flex-start;
-  padding: 25px;
   border: solid 2px white;
   width: 100%;
-  height: max-content;
+  height: 50vh;
   background-image: url("assets/alien-7779711_1920.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -269,10 +269,15 @@ main .container .numbers .section-items-button {
 .container-planets .section-planets table {
   width: 100%;
   border-collapse: collapse;
+  padding: 20px;
 }
 .container-planets .section-planets table thead {
   background-color: #659dd9;
   color: white;
+}
+.container-planets .section-planets table #planetData {
+  height: 200px;
+  overflow: scroll;
 }
 .container-planets .section-planets table th, .container-planets .section-planets table td {
   padding: 15px;
@@ -291,6 +296,21 @@ main .container .numbers .section-items-button {
 }
 .container-planets .section-planets table tr:hover {
   background-color: #7fa8d5;
+}
+.container-planets .section-planets.scrollable {
+  max-height: 70vh;
+}
+.container-planets .section-planets .countPlanets {
+  width: 100%;
+  color: white;
+  padding: 20px;
+  backdrop-filter: blur(10px);
+  transition: backdrop-filter 0.5s ease-in-out;
+}
+.container-planets .section-planets .countPlanets p {
+  color: #659dd9;
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 .container-planets .display-planets {
   display: flex;
