--- a/style/_planets.scss
+++ b/style/_planets.scss
@@ -6,14 +6,16 @@
     width: 100%;
 
   .section-planets {
+    //position: relative;
     display: flex;
     flex-direction: column;
     gap: 20px;
+    padding: 20px;
     align-items: flex-start;
-    padding: 25px;
     border: solid 2px white;
     width: 100%;
-    height: max-content;
+    height: 50vh;
+    //overflow-y: scroll;
 
     background-image: url("assets/alien-7779711_1920.jpg");
     background-size: cover;
@@ -53,10 +55,16 @@
     table {
         width: 100%;
         border-collapse: collapse;
+        padding: 20px;
 
       thead {
         background-color: #659dd9;
         color: white;
+      }
+
+      #planetData{
+        height: 200px;
+        overflow: scroll;
       }
 
       th,td {
@@ -82,7 +90,30 @@
       }
     }
 
+    &.scrollable {
+        max-height: 70vh;
+    }
+
+    .countPlanets {
+      //position: absolute;
+      //bottom: 0;
+      //left: 0;
+      width: 100%;
+      color: white;
+      padding: 20px;
+      backdrop-filter: blur(10px);
+      transition: backdrop-filter 0.5s ease-in-out;
+      //z-index: 1;
+
+      p {
+        color: #659dd9;
+        font-size: 1.2rem;
+        font-weight: bold;
+      }
+    }
+
   }
+
 
   .display-planets{
     display: flex;
@@ -95,5 +126,6 @@
       color: #659dd9;
       font-style: italic;
     }
+
   }
 }
