--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ main .container .about, main .container .numbers {
   align-items: flex-start;
   padding: 25px;
   border: solid 2px white;
-  background-image: url("alien-7779711_1920.jpg");
+  background-image: url("../assets/alien-7779711_1920.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -180,7 +180,7 @@ main .container .about .btn, main .container .numbers .btn {
 }
 main .container .numbers {
   margin-top: 100px;
-  background-image: url("moon-2048727_1920.jpg");
+  background-image: url("../assets/moon-2048727_1920.jpg");
 }
 main .container .numbers .items-header {
   display: flex;
@@ -235,8 +235,8 @@ main .container .numbers .section-items-button {
   padding: 20px;
   align-items: flex-start;
   border: solid 2px white;
-  width: 100%;
-  height: 50vh;
+  width: 60%;
+  height: calc(100% - 90px);
   background-image: url("assets/alien-7779711_1920.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -266,38 +266,39 @@ main .container .numbers .section-items-button {
   width: 100%;
   margin-bottom: 20px;
 }
-.container-planets .section-planets table {
+.container-planets .section-planets .tablePlanet {
+  width: 100%;
+  max-height: 500px;
+  overflow: scroll;
+}
+.container-planets .section-planets .tablePlanet table {
   width: 100%;
   border-collapse: collapse;
   padding: 20px;
 }
-.container-planets .section-planets table thead {
+.container-planets .section-planets .tablePlanet table thead {
   background-color: #659dd9;
   color: white;
 }
-.container-planets .section-planets table #planetData {
-  height: 200px;
-  overflow: scroll;
-}
-.container-planets .section-planets table th, .container-planets .section-planets table td {
+.container-planets .section-planets .tablePlanet table th, .container-planets .section-planets .tablePlanet table td {
   padding: 15px;
   color: white;
 }
-.container-planets .section-planets table th:first-child, .container-planets .section-planets table td:first-child {
+.container-planets .section-planets .tablePlanet table th:first-child, .container-planets .section-planets .tablePlanet table td:first-child {
   text-align: left;
 }
-.container-planets .section-planets table th:last-child, .container-planets .section-planets table td:last-child {
+.container-planets .section-planets .tablePlanet table th:last-child, .container-planets .section-planets .tablePlanet table td:last-child {
   text-align: right;
 }
-.container-planets .section-planets table tr {
+.container-planets .section-planets .tablePlanet table tr {
   border-bottom: solid 1px white;
   cursor: pointer;
   transition: 0.5s ease-in-out;
 }
-.container-planets .section-planets table tr:hover {
+.container-planets .section-planets .tablePlanet table tr:hover {
   background-color: #7fa8d5;
 }
-.container-planets .section-planets.scrollable {
+.container-planets .section-planets .tablePlanet.scrollable {
   max-height: 70vh;
 }
 .container-planets .section-planets .countPlanets {
@@ -313,15 +314,73 @@ main .container .numbers .section-items-button {
   font-weight: bold;
 }
 .container-planets .display-planets {
-  display: flex;
   border: solid 1px white;
   width: 100%;
   height: max-content;
   padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 .container-planets .display-planets p {
   color: #659dd9;
   font-style: italic;
+}
+.container-planets .display-planets .detailsPlanet {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  width: 100%;
+}
+.container-planets .display-planets .detailsPlanet .detailsPlanet_header {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.container-planets .display-planets .detailsPlanet .detailsPlanet_content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 80%;
+}
+.container-planets .display-planets .detailsPlanet .detailsPlanet_content .items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+.container-planets .display-planets .detailsPlanet .detailsPlanet_content .items .item-logo {
+  font-size: 35px;
+}
+.container-planets .display-planets .detailsPlanet .detailsPlanet_content .items .item-logo i {
+  color: #659dd9;
+}
+.container-planets .display-planets .detailsPlanet .detailsPlanet_content .items .item-content {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
+.container-planets .display-planets .detailsPlanet .detailsPlanet_content .items .item-content h3 {
+  color: #659dd9;
+  font-weight: bold;
+}
+.container-planets .display-planets .detailsPlanet .detailsPlanet_content .items .item-content .gravity, .container-planets .display-planets .detailsPlanet .detailsPlanet_content .items .item-content .diameter, .container-planets .display-planets .detailsPlanet .detailsPlanet_content .items .item-content .population, .container-planets .display-planets .detailsPlanet .detailsPlanet_content .items .item-content .climat, .container-planets .display-planets .detailsPlanet .detailsPlanet_content .items .item-content .terrain {
+  color: white;
+}
+.container-planets .display-planets .moreInfo {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+}
+.container-planets .display-planets .moreInfo .btn {
+  background-color: black;
+  border: white solid 1px;
+  padding: 10px 15px;
+  text-transform: uppercase;
 }
 
 /*# sourceMappingURL=style.css.map */
