--- a/style/_planets.scss
+++ b/style/_planets.scss
@@ -6,7 +6,7 @@
     width: 100%;
 
   .section-planets {
-    //position: relative;
+    position: relative;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -15,7 +15,6 @@
     border: solid 2px white;
     width: 60%;
     height: calc(100% - 90px);
-    //overflow-y: scroll;
 
     background-image: url("assets/alien-7779711_1920.jpg");
     background-size: cover;
@@ -50,6 +49,35 @@
     .search {
       width: 100%;
       margin-bottom: 20px;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    #loader {
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+    }
+
+    .spinner {
+      border: 4px solid rgba(255, 255, 255, 0.3);
+      border-top: 4px solid #3498db;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
 
     .tablePlanet{
@@ -124,16 +152,17 @@
     gap: 20px;
 
 
-    p{
+    .toggle{
       color: #659dd9;
       font-style: italic;
     }
 
     .detailsPlanet {
-      display: flex;
+      display: none;
       flex-direction: column;
       gap: 50px;
       width: 100%;
+
       .detailsPlanet_header {
         display: flex;
         flex-direction: column;
@@ -183,7 +212,7 @@
     }
 
     .moreInfo {
-      display: flex;
+      display: none;
       justify-content: flex-end;
       align-items: center;
       width: 100%;
